--- a/app/src/main/res/layout/list_lagu.xml
+++ b/app/src/main/res/layout/list_lagu.xml
@@ -1,27 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <TextView
-        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/List"
+    android:gravity="center|left"
+    android:padding="20dp">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvJudul"
-        android:text="Judul lagu"
-        android:textSize="15sp"
-        android:textStyle="bold"/>
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvPenyanyi"
-            android:text="Penyanyi Lagu"
-            android:textSize="12sp" />
+            android:id="@+id/tvJudul"
+            android:text="Judul lagu"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="@color/putih"/>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <TextView
+                    android:textColor="@color/putih"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvPenyanyi"
+                    android:text="Penyanyi Lagu"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-    </HorizontalScrollView>
+
+        </HorizontalScrollView>
+    </LinearLayout>
 
 
-</LinearLayout>
+
+</RelativeLayout>
