--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -33,19 +33,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
                 <ImageView
+                    android:id="@+id/Wajib"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:src="@drawable/iconlaguwajib"
-                    android:id="@+id/Wajib"/>
+                    android:src="@drawable/garuda" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="4"
                     android:text="Lagu Wajib"
                     android:gravity="center|top"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:textStyle="bold"/>
 
             </LinearLayout>
@@ -68,19 +69,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:id="@+id/Daerah"
+                    android:layout_width="177dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:src="@drawable/iconlagudaerah"
-                    android:id="@+id/Daerah"/>
+                    android:src="@drawable/iconlagudaerah" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="4"
                     android:text="Lagu Daerah"
                     android:gravity="center|top"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:textStyle="bold"/>
 
             </LinearLayout>
