--- a/app/src/main/res/layout/fragment_daftar_putar.xml
+++ b/app/src/main/res/layout/fragment_daftar_putar.xml
@@ -8,6 +8,8 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/navigation_DaftarPutar"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
