--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="putih">#ffffff</color>
     <color name="colorWhiteTransparent">#80ffffff</color>
     <color name="hitam">#000000</color>
+    <color name="colorRed">#F71100</color>
 </resources>
