--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -6,17 +6,20 @@
     tools:context=".Fragment.BerandaFragment"
     android:orientation="vertical">
     <TextView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Beranda"
+        android:textColor="@color/putih"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="25sp"/>
 
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <android.support.v7.widget.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
@@ -56,7 +59,6 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
-
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="4dp"
@@ -72,9 +74,10 @@
 
                 <ImageView
                     android:id="@+id/Daerah"
-                    android:layout_width="177dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:layout_gravity="center"
                     android:src="@drawable/iconlagudaerah" />
                 <TextView
                     android:layout_width="match_parent"
@@ -89,11 +92,4 @@
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="440dp"
-        android:id="@+id/rvHistory">
-
-    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
