--- a/app/src/main/res/layout/fragment_tentang.xml
+++ b/app/src/main/res/layout/fragment_tentang.xml
@@ -18,6 +18,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         card_view:cardCornerRadius="4dp">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -49,10 +50,10 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:textColor="@color/putih"
+                        android:id="@+id/tvInfoResma"
                         android:text="@string/deskripsi"
-                        android:textSize="30sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
-
             </ScrollView>
         </LinearLayout>
     </android.support.v7.widget.CardView>
