--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,8 +19,7 @@
             android:text="Score"
             android:id="@+id/tvScore"
             android:textSize="40sp"
-            android:visibility="go
-"/>
+            android:visibility="gone"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
